--- a/src/components/Blog/blog.module.scss
+++ b/src/components/Blog/blog.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   font-family: Poppins, Helvetica, Arial, sans-serif;
   padding: 25px 0;
+  margin-bottom: 50px;
   .title {
     font-weight: 700;
     font-size: 36px;
